--- a/plants_app/pubspec.yaml
+++ b/plants_app/pubspec.yaml
@@ -23,3 +23,7 @@ flutter:
   assets:
   - assets\plantimg1.png
   - assets\plant img2.png
+  - assets\Group 5314.png
+  - assets\shopping-bag.png
+  - assets\Group 5318.png
+ 
