--- a/plants_app/pubspec.yaml
+++ b/plants_app/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   google_fonts: ^6.2.1
   sqflite: ^2.3.2
   path: ^1.9.0
+  carousel_slider: ^4.2.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -26,4 +28,7 @@ flutter:
   - assets\Group 5314.png
   - assets\shopping-bag.png
   - assets\Group 5318.png
+  - assets\thermometer.png
+  - assets\Vector (11).png
+  - assets\Group 5470.png
  
