--- a/pet_app/pubspec.yaml
+++ b/pet_app/pubspec.yaml
@@ -47,3 +47,5 @@ flutter:
   - assets\image (18).png
   - assets\image (19).png
   - assets\image (20).png
+  - assets\image (21).png
+  - assets\image (23).png
