--- a/student_announcement/pubspec.yaml
+++ b/student_announcement/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   google_fonts: ^6.2.1
+  firebase_core: ^3.1.0
+  cloud_firestore: ^5.0.1
 
 dev_dependencies:
   flutter_test:
