Home Rental App

--- a/home_rental_app/pubspec.yaml
+++ b/home_rental_app/pubspec.yaml
@@ -19,3 +19,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+  - assets\Rectangle 1.png
+  - assets\Rectangle 5 (1).png
+  - assets\Rectangle 5.png
+  - assets\circle-profile-pic.jpg
