--- a/student_app/pubspec.yaml
+++ b/student_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_storage: ^12.0.1
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
   google_fonts: ^6.2.1
   image_picker: ^1.1.2
 
@@ -19,6 +20,26 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: "^0.13.1"
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "outputs/studentapp.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "outputs/studentapp.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "outputs/studentapp.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "outputs/studentapp.png"
 
 flutter:
   uses-material-design: true
+  assets:
+  - outputs\studentapp.png
