Home Rental App

--- a/home_rental_app/pubspec.yaml
+++ b/home_rental_app/pubspec.yaml
@@ -24,3 +24,4 @@ flutter:
   - assets\Rectangle 5 (1).png
   - assets\Rectangle 5.png
   - assets\circle-profile-pic.jpg
+  - assets\Rectangle 6.png
