--- a/bicycle_app/pubspec.yaml
+++ b/bicycle_app/pubspec.yaml
@@ -28,3 +28,7 @@ flutter:
   - assets\pngwing.png
   - assets\search-normal.png
   - assets\pngwing (4).png
+  - assets\image 2.png
+  - assets\image 1 (1).png
+  - assets\image 3 (1).png
+  - assets\image 4.png
