--- a/fashion_app/pubspec.yaml
+++ b/fashion_app/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.1.0
   google_fonts: ^6.2.1
+  intl: ^0.19.0
   provider: ^6.1.2
 
 dev_dependencies:
@@ -32,3 +34,8 @@ flutter:
   - assets\Menu.png
   - assets\Profile.png
   - assets\Cart.png
+  - assets\Group 63.png
+  - assets\Ellipse 14.png
+  - assets\Ellipse 15.png
+  - assets\Ellipse 16.png
+  - assets\trash.png
