--- a/fashion_app/pubspec.yaml
+++ b/fashion_app/pubspec.yaml
@@ -39,3 +39,10 @@ flutter:
   - assets\Ellipse 15.png
   - assets\Ellipse 16.png
   - assets\trash.png
+  - assets\Rectangle 121.png
+  - assets\XMLID_328_.png
+  - assets\visa.png
+  - assets\kio.png
+  - assets\Vector (12).png
+  - assets\Vector (13).png
+  - assets\Group 10.png
