--- a/wallet_app/pubspec.yaml
+++ b/wallet_app/pubspec.yaml
@@ -46,5 +46,16 @@ flutter:
   - assets\Topup.png
   - assets\Group 4.png
   - assets\Group 4 (2).png
+  - assets\Topup.png
+  - assets\upload-line.png
+  - assets\Vector (12).png
+  - assets\wallet-fill.png
+  - assets\wallet-line.png
+  - assets\The home depot.png
+  - assets\home-3-fill.png
+  - assets\home-3-line.png
+  - assets\bank-card-2-fill.png
+  - assets\bank-card-2-line.png
+  - assets\download-line.png
 
 
