--- a/wallet_app/pubspec.yaml
+++ b/wallet_app/pubspec.yaml
@@ -57,5 +57,7 @@ flutter:
   - assets\bank-card-2-fill.png
   - assets\bank-card-2-line.png
   - assets\download-line.png
+  - assets\Wallmart.png
+  
 
 
