--- a/music_app/pubspec.yaml
+++ b/music_app/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   provider: ^6.1.2
   sqflite: ^2.3.3+1
   google_fonts: ^6.2.1
+  percent_indicator: ^4.2.3
+  audio_video_progress_bar: ^2.0.3
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -32,5 +35,6 @@ flutter:
   - assets\Rectangle 38.png
   - assets\Rectangle 39.png
   - assets\Rectangle 40.png
+  - assets/audio/
 
 
