--- a/music_app/pubspec.yaml
+++ b/music_app/pubspec.yaml
@@ -36,5 +36,15 @@ flutter:
   - assets\Rectangle 39.png
   - assets\Rectangle 40.png
   - assets/audio/
+  - assets\Faded.png
+  - assets\gulabi sadi.jpg
+  - assets\jocker.jpg
+  - assets\music1.jpg
+  - assets\moneyh.jpg
+  - assets\music4.jpeg
+  - assets\nadaniya.jpg
+  - assets\pirates.png
+  - assets\suniyas.jpg
+  - assets\yjhd.jpg
 
 
