--- a/wallet_app/pubspec.yaml
+++ b/wallet_app/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   - assets\Wallmart.png
   - assets\file-list-3-fill.png
   - assets\file-list-3-line.png
+  - assets\equalizer-line.png
   
 
 
