--- a/wallet_app/pubspec.yaml
+++ b/wallet_app/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
   - assets\file-list-3-fill.png
   - assets\file-list-3-line.png
   - assets\equalizer-line.png
+  - assets\Icon (1).png
+  - assets\Verified photo.png
   
 
 
