--- a/wallet_app/pubspec.yaml
+++ b/wallet_app/pubspec.yaml
@@ -63,6 +63,10 @@ flutter:
   - assets\equalizer-line.png
   - assets\Icon (1).png
   - assets\Verified photo.png
+  - assets\Ellipse 10.png
+  - assets\Ellipse 11.png
+  - assets\Ellipse 12.png
+  - assets\rss-line.png
   
 
 
