--- a/wallet_app/pubspec.yaml
+++ b/wallet_app/pubspec.yaml
@@ -67,6 +67,11 @@ flutter:
   - assets\Ellipse 11.png
   - assets\Ellipse 12.png
   - assets\rss-line.png
+  - assets\Icon (12).png
+  - assets\Icon (13).png
+  - assets\Icon (14).png
+  - assets\Illustration.png
+  - assets\Illustration2.png
   
 
 
