--- a/fitness_app/pubspec.yaml
+++ b/fitness_app/pubspec.yaml
@@ -51,4 +51,8 @@ flutter:
   - assets\kneepushup.png
   - assets\running.png
   - assets\Heartrate.png
+  - assets\Rectangle 853.png
+  - assets\Group 26.png
+  - assets\Vector (13).png
+  - assets\Group 9 (1).png
 
