--- a/fitness_app/pubspec.yaml
+++ b/fitness_app/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_slidable: ^3.1.1
   google_fonts: ^6.2.1
+  google_nav_bar: ^5.0.6
   http: ^1.2.2
   percent_indicator: ^4.2.3
   provider: ^6.1.2
