--- a/music_app/pubspec.yaml
+++ b/music_app/pubspec.yaml
@@ -7,7 +7,7 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
-  carousel_slider: ^4.2.1
+  carousel_slider: ^5.0.0
   flutter:
     sdk: flutter
   http: ^1.2.1
@@ -22,6 +22,7 @@ dependencies:
   firebase_storage: ^12.1.1
   cloud_firestore: ^5.1.0
   firebase_auth: ^5.1.2
+  flutter_slidable: ^3.1.1
 
 dev_dependencies:
   flutter_test:
