--- a/plants_app/pubspec.yaml
+++ b/plants_app/pubspec.yaml
@@ -14,6 +14,10 @@ dependencies:
   path: ^1.9.0
   carousel_slider: ^5.0.0
   provider: ^6.1.2
+  firebase_storage: ^11.6.0
+  firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
