--- a/plants_app/pubspec.yaml
+++ b/plants_app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^4.16.0
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
+  razorpay_flutter: ^1.3.7
 
 dev_dependencies:
   flutter_test:
@@ -35,4 +36,18 @@ flutter:
   - assets\thermometer.png
   - assets\Vector (11).png
   - assets\Group 5470.png
+  - assets\agave.jpeg
+  - assets\arborvitae.jpg
+  - assets\Chinese Evergreen.jpeg
+  - assets\dracaena.jpeg
+  - assets\english lvy.jpg
+  - assets\fuchsia.jpeg
+  - assets\golden pothos.jpeg
+  - assets\money plan.jpeg
+  - assets\pachira.jpg
+  - assets\peace lily.jpeg
+  - assets\philodendron.jpeg
+  - assets\zamia green.jpeg
+  - assets\zz plants.jpeg
+
  
