--- a/plants_app/pubspec.yaml
+++ b/plants_app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_core: ^2.24.2
   razorpay_flutter: ^1.3.7
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
