--- a/plants_app/pubspec.yaml
+++ b/plants_app/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   firebase_core: ^2.24.2
   razorpay_flutter: ^1.3.7
   fluttertoast: ^8.2.8
-  dio: ^5.6.0
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
