--- a/fashion_app/pubspec.yaml
+++ b/fashion_app/pubspec.yaml
@@ -46,3 +46,15 @@ flutter:
   - assets\Vector (12).png
   - assets\Vector (13).png
   - assets\Group 10.png
+  - assets\women\Elegant Emerald Wine Dress.jpg
+  - assets\women\midi dress.jpg
+  - assets\women\winter clothes.jpg
+  - assets\other\ITechShop wireless.jpg
+  - assets\other\samsung Galaxy wireless.jpg
+  - assets\kids\2Pcs Casual cotton.jpg
+  - assets\kids\13 Rock Star ideas.jpg
+  - assets\kids\30 and broke.jpg
+  - assets\kids\Baby Girl Dungree.jpg
+  - assets\kids\Kid Floral Print.jpg
+  - assets\other\apple-iphone-14-pro-max-1.jpg
+  - assets\other\headphone.jpg
