--- a/fashion_app/pubspec.yaml
+++ b/fashion_app/pubspec.yaml
@@ -58,3 +58,4 @@ flutter:
   - assets\kids\Kid Floral Print.jpg
   - assets\other\apple-iphone-14-pro-max-1.jpg
   - assets\other\headphone.jpg
+  - assets\women\kurties1.jpg
