--- a/fashion_app/pubspec.yaml
+++ b/fashion_app/pubspec.yaml
@@ -59,3 +59,8 @@ flutter:
   - assets\other\apple-iphone-14-pro-max-1.jpg
   - assets\other\headphone.jpg
   - assets\women\kurties1.jpg
+  - assets\Ellipse 901 (1).png
+  - assets\Icon (8).png
+  - assets\Icon (9).png
+  - assets\Icon (10).png
+  - assets\Icon (11).png
