--- a/fashion_app/pubspec.yaml
+++ b/fashion_app/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   flutter_slidable: ^3.1.0
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  path_provider: ^2.1.4
   provider: ^6.1.2
+  sqflite: ^2.3.3+1
 
 dev_dependencies:
   flutter_test:
